@@ -13,7 +13,7 @@ en:
         optionals:
           with_kind_of:
             positive: "with kind of {{value}}"
-            
+
       have_before_filter:
         description: "{{name}}"
         expectations:
@@ -23,11 +23,11 @@ en:
             positive: "except on {{inspect}}"
           only:
             positive: "only on {{inspect}}"
-            
+
       have_actions:
-        description: "respond to {{params}}"
+        description: "respond to {{actions}}"
         expectations:
-          has_action: "controller to respond to {{param}}"
+          has_action: "controller to respond to {{action}}"
 
       filter_params:
         description: "filter {{params}} parameters from log"
