@@ -3,52 +3,42 @@ require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
 describe 'have_actions' do
   include FunctionalBuilder
 
+  before(:each) do 
+    @controller = define_controller :Comments do
+      def index
+      end
+
+      def create
+      end
+
+      def another_method
+      end
+      hide_action :another_method
+    end.new
+
+    self.class.subject { @controller }
+  end
+
   describe 'messages' do
-    before(:each) do
-      @controller = define_controller :Posts do
-        def index
-        end
-      end.new
-
-      @matcher = have_action(:index)
-    end
-
     it 'should contain a description message' do
-      @matcher.description.should == 'respond to index'
+      have_action(:index).description.should == 'respond to index'
     end
 
     it 'should set has_action? message' do
-      @controller = define_controller(:Comments).new
+      @matcher = have_action(:show)
       @matcher.matches?(@controller)
-      @matcher.failure_message.should == 'Expected controller to respond to index'
+      @matcher.failure_message.should == 'Expected controller to respond to show'
     end
   end
 
-  describe 'having action' do
-    before(:each) do 
-      @controller = define_controller :Comments do
-        def index
-        end
-        
-        def create
-        end
-      end.new
-
-      self.class.subject { @controller }
-    end
-
-    should_have_actions [:index, :create]
+  describe 'matcher' do
     should_have_action :index
-  end
+    should_have_actions :index, :create
 
-  describe 'not having action' do
-    before(:each) do 
-      @controller = define_controller(:Comments).new
-      self.class.subject { @controller }
-    end
-
-    should_not_have_actions [:destroy, :update]
     should_not_have_action :destroy
+    should_not_have_actions :destroy, :update
+
+    should_not_have_action :another_method
   end
 
 end
